crates/parser/src/snapshots/parser__tests__err_test@0073_pick_witnesses_no_body.ath.snap
---
source: crates/parser/src/tests.rs
description: "pick-witnesses a for\n"
input_file: crates/parser/test_data/parser/inline/err/ded/0073_pick_witnesses_no_body.ath
---
PICK_WITNESSES_DED
  PICK_WITNESSES_KW "pick-witnesses"
  WHITESPACE " "
  IDENTIFIER
    IDENT "a"
    WHITESPACE " "
  FOR_KW "for"
  WHITESPACE "\n"
error 21: expected body for pick witnesses

