crates/parser/src/snapshots/parser__tests__err_test@0074_induct_no_phrase.ath.snap
---
source: crates/parser/src/tests.rs
description: "by-induction { a => (!claim a) }\n"
input_file: crates/parser/test_data/parser/inline/err/ded/0074_induct_no_phrase.ath
---
INDUCT_DED
  BY_INDUCTION_KW "by-induction"
  WHITESPACE " "
  L_CURLY "{"
  WHITESPACE " "
  RESTRICTED_MATCH_DED
    IDENT_PAT
      IDENTIFIER
        IDENT "a"
        WHITESPACE " "
    FAT_ARROW "=>"
    WHITESPACE " "
    BANG_METHOD_CALL_DED
      L_PAREN "("
      BANG "!"
      IDENT_EXPR
        IDENTIFIER
          IDENT "claim"
          WHITESPACE " "
      EXPR_PHRASE
        IDENT_EXPR
          IDENTIFIER
            IDENT "a"
      R_PAREN ")"
      WHITESPACE " "
  R_CURLY "}"
  WHITESPACE "\n"
error 13: expected phrase in by-induction deduction

